Cambios agregados sitio twitch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p>Hola, este ese mi sitio web. Sígueme en twitter en @JuanviReyes</p>
+    <p>Hola, este ese mi sitio web. Sígueme en twitter en @JuanviReyes
+        o en twitch.tv/juanvireyesi para que charlemos
+    </p>
     
 </body>
 </html>
